# WVU_RSM_Suite

./: .gitignore  GNU License.txt  README.md
ARCH/: RSM+TPM_RockyLinux_9.def  RSM+TPM_Ubuntu_focal.def  RSM+TPM_Ubuntu_jammy.def  load_modules_Thorny_Flat.sh
Inputs/: Model_Evaluation.json
Inputs/Model_Evaluation_Inputs/: Model_Input_Data.csv
Inputs/STL_Rotation_Inputs/: hinge_points1.txt
Outputs/: deflections.txt
Outputs/Cd_Results/: FolderReadMe.txt
Outputs/Projected_Area/: FolderReadMe.txt
Outputs/RSM_Regression_Models/: FolderReadMe.txt
Outputs/RSM_Regression_Models/data/Test Set/: FolderReadMe.txt
Outputs/RSM_Regression_Models/data/Training Set/: FolderReadMe.txt
RSM_TPMC/: lhsu.py  load_modules.sh  ltqnorm.py  model_evaluation_script.py  projected_area.py  regression_model.py  rotate_stl.py  rsm_run_script.py
RSM_TPMC/tpm/: Makefile_OLD  README.md  autogen.sh  configure.ac
RSM_TPMC/tpm/m4/: ax_lib_hdf5.m4
RSM_TPMC/tpm/src/: Makefile.am  tpm.c  tpm.h  tpm.h.in
RSM_TPMC/tpm/tests/: Makefile.am
WVU_RSM/Inputs/: Simulation.json
WVU_RSM/Inputs/STL_Files/: FolderReadMe.txt
WVU_RSM/Inputs/STL_Rotation_Inputs/: hinge_points2.txt  parent.txt
WVU_RSM/Outputs/RSM_Regression_Models/Plots_Output/: FolderReadMe.txt
WVU_RSM/RSM_TPMC/: lhsu.py  rsm_run_script.py
WVU_RSM/RSM_TPMC/tpm/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
WVU_RSM/RSM_TPMC/tpm/autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
WVU_RSM/RSM_TPMC/tpm/m4/: ax_lib_hdf5.m4
WVU_RSM/RSM_TPMC/tpm/src/: Makefile.am  Makefile.in  tpm.c  tpm.h.in~
WVU_RSM/tempfiles/: tpm.ensemble
WVU_RSM/tempfiles/Mesh_Files/: FolderReadMe.txt
tempfiles/: temp_variables.txt  tpm.ensemble.h5
